<package format="2">
    <name>nimbro_log_transport</name>
    <version>1.1.0</version>
    <description>Handles transport of log messages over unreliable connections</description>

    <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rosgraph_msgs</depend>
    <depend>std_msgs</depend>

    <build_depend>boost</build_depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
