<package format="2">
    <name>nimbro_topic_transport</name>
    <version>1.1.0</version>
    <description>Contains nodes for TCP/UDP communication between ROS masters</description>

    <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>bzip2</depend>
    <depend>libqcustomplot-dev</depend>
    <depend>libqt5-printsupport</depend>
    <depend>libqt5-widgets</depend>
    <depend>libzstd-dev</depend>
    <depend>pkg-config</depend>
    <depend>roscpp</depend>
    <depend>rqt_gui_cpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>topic_tools</depend>
    <depend>yaml-cpp</depend>

    <build_depend>qtbase5-dev</build_depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>

    <!-- This is not a hard dependency, the package compiles without plot_msgs. -->
    <depend>plot_msgs</depend>

    <!-- This is not a hard dependency, the package compiles without config_server. -->
    <depend>config_server</depend>

    <test_depend>catch_ros</test_depend>
    <test_depend>rostest</test_depend>

    <export>
        <rqt_gui plugin="${prefix}/rqt_plugin.xml" />
        <rqt_gui plugin="${prefix}/bandwidth_plugin.xml" />
    </export>

</package>
