<package format="2">
    <name>tf_throttle</name>
    <version>1.1.0</version>
    <description>Throttles TF output down to bandwidth suitable for wifi</description>

    <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>
</package>
